src/scss/scaffold.scss
// Body

body {
  background: $bg-color;
  font-family: Lato, Helvetica Neue, Helvetica, Arial;
  font-size: 12px;
  overflow-y: hidden;
}

[draggable] {
  user-select: none;
}

// The two main sections of our app
// Sidebar is where the react components are placed
.sidebar-container{
  width: $sidebars-width;
  position: relative;
  height: 100%;
}

// Vis-container is where vega is placed
.vis-container {
  position: absolute;
  display: block;
  left: $sidebars-width;
  right: 0;
  top: 40px;
  bottom: 0;
  overflow: auto;


  #vis {
    margin: 0 2*$outer-padding 2*$outer-padding;

    canvas, svg {
      border: 1px solid #ccc;
      box-shadow: 2px 2px 17px 0px rgba(0,0,0,0.15)
    }
  }

  .interaction-widget {
    border: 1px solid #333333;
    padding: $outer-padding;
    border-radius: 3px;
    display: inline-block;
    margin: 0 2*$outer-padding 2*$outer-padding 2*$outer-padding;
  }

  .widget-tag {
    border: 1px solid #bed000;
    padding: 3px 10px;
    cursor: pointer;
    background:#bed9ab;
    border-radius: 3px;
    display: inline-block;
    margin: 5px 2px;
  }

  .widgetPanel {
    margin-top: 50px;
    background: #ccc;
    padding: 20px;
  }

    .widgetDemonstration {
      display: inline-block;
      margin: 0 25px;
      padding: 10px;
      background: #bbb;

      &:hover {
        background: #aaa;
      }
    }

  .widgetPanel.disabled {
    display: none;
  }


  .interaction-preview-container .preview-controller {
    background: rgb(200,200,200);
    width: 100%;
    display: none;

    &.active {
      display: block;
      position: absolute;
      bottom: 0;
    }

    h2 {
      justify-content: normal;
      margin: 0 $outer-padding;
    }

    h5  {
      margin: $outer-padding $outer-padding $outer-padding / 2;
    }

    .preview-close {
      margin-left: auto;
      margin-right: $outer-padding;
      cursor: pointer;
    }

    .preview-header {
      display: flex;
      align-items: center;
      padding-top: $inner-padding;
    }

    .preview-header h2 {
      display: inline;
    }

    .preview-scroll {
      display: flex;
      background: #aaa;
    }

    .preview-scroll > div {
      display: inline-block;
      padding: 0 $outer-padding $outer-padding;

      &.selected {
        background: #777;
        color: white;
      }

      .preview-label {
        margin: 0.5 * $outer-padding 0;
      }

      svg.marks > g {
        transform: translate(12px, 13px);
      }
    }
  }
}

// each vertical sidebar
.sidebar {
  float: left;
  position: relative;
  z-index: 999;
  height: 100%;
  overflow-y: scroll;
  background-color: $bg-color;
  box-sizing: border-box;

  h2 {
    padding: 10px;
  }
}

#visual-sidebar {
  display: flex;
  flex-flow: column;
  width: $visual-sidebar-width;
  background-color: $vlgrey-bg;
  border-right: 1px solid $lgrey-bg;
}

#inspector {
  width: $inspector-width;
  background-color: $lblue-bg;
}
.widget-tag {
  border: 1px solid #bed000;
  padding: 3px 10px;
  cursor: pointer;
  background:#bed9ab;
  border-radius: 3px;
  display: inline-block;
  margin: 5px 2px;
}

#pipeline-sidebar {
  width: $pipeline-sidebar-width;
  background-color: $dblue-bg;
}

.tooltip {
  font-size: 11px !important;
  padding: $inner-padding $outer-padding !important;
  border-radius: $border-radius !important;
  line-height: 1.3em !important;
}

.hidden {
  display: none;
}

